force-app/main/default/objects/WasteDestination__c/WasteDestination__c.object-meta.xml
<CustomObject>
    <label>Waste Destination</label>
    <nameField>
        <label>Waste Destination Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Waste Destinations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>