force-app/main/default/objects/WasteDestination__c/fields/Alternative__c.field-meta.xml
<CustomField>
    <fullName>Alternative__c</fullName>
    <label>Alternative</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>