force-app/main/default/objects/WasteDestination__c/fields/AnaerobicDigestion__c.field-meta.xml
<CustomField>
    <fullName>AnaerobicDigestion__c</fullName>
    <label>Anaerobic Digestion</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>