force-app/main/default/objects/WasteDestination__c/fields/Composted__c.field-meta.xml
<CustomField>
    <fullName>Composted__c</fullName>
    <label>Composted</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>