force-app/main/default/objects/WasteDestination__c/fields/Hazardous__c.field-meta.xml
<CustomField>
    <fullName>Hazardous__c</fullName>
    <label>Hazardous</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>