force-app/main/default/objects/WasteDestination__c/fields/IncineratedWithEnergyRecovery__c.field-meta.xml
<CustomField>
    <fullName>IncineratedWithEnergyRecovery__c</fullName>
    <label>Incinerated With Energy Recovery</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>