force-app/main/default/objects/WasteDestination__c/fields/IncineratedWithoutEnergyRecovery__c.field-meta.xml
<CustomField>
    <fullName>IncineratedWithoutEnergyRecovery__c</fullName>
    <label>Incinerated Without Energy Recovery</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>