force-app/main/default/objects/WasteDestination__c/fields/IsActiveToday__c.field-meta.xml
<CustomField>
    <fullName>IsActiveToday__c</fullName>
    <formula>AND(StartDate__c &lt;= TODAY(), OR(ISBLANK(EndDate__c), EndDate__c &gt;= TODAY()))</formula>
    <label>Active Today?</label>
    <type>Checkbox</type>
</CustomField>