force-app/main/default/objects/WasteDestination__c/fields/Landfill__c.field-meta.xml
<CustomField>
    <fullName>Landfill__c</fullName>
    <label>Landfill</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>