force-app/main/default/objects/WasteDestination__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>