force-app/main/default/objects/WasteDestination__c/fields/Recycled__c.field-meta.xml
<CustomField>
    <fullName>Recycled__c</fullName>
    <label>Recycled</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>