force-app/main/default/objects/WasteDestination__c/fields/Reuse__c.field-meta.xml
<CustomField>
    <fullName>Reuse__c</fullName>
    <label>Reuse</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>