force-app/main/default/objects/WasteDestination__c/fields/ServiceSubtype__c.field-meta.xml
<CustomField>
    <fullName>ServiceSubtype__c</fullName>
    <label>Service Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Subtype</valueSetName>
    </valueSet>
</CustomField>