force-app/main/default/objects/WasteDestination__c/fields/WasteToEnergy__c.field-meta.xml
<CustomField>
    <fullName>WasteToEnergy__c</fullName>
    <label>Waste To Energy</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>